--- a/less/variables.less
+++ b/less/variables.less
@@ -1,19 +1,18 @@
 // Color assignments 
-@font-color: @peach;
-@main-bg:  @medium-blue;
-@nav-text: @light-blue;
-@copywright-text: @blue;
-@hover: @red;
-@navmedia: @gray;
-@secondary-text: @white;
+@font-color: @Gray;
+@main-bg:  @Dark-Blue;
+@nav-text: @Light-Blue;
+@copywright-text: @Black;
+@hover: @Dark-Gray;
+@navmedia: @Gray;
+@secondary-text: @Ocean-Blue;
 
 // Colors
-@blue: #0000FF;
-@light-blue: #0753f8;
-@medium-blue: #2E4482;
-@red: red;
-@gray: #87889C;
-@white: #FFFFFF;
-@peach: #BEA9DE;
+@Black: #343838;
+@Dark-Blue: #005F6B;
+@Dark-Gray: #477F87;
+@Light-Blue: #00B4CC;
+@Gray: #C4C4C4;
+@Ocean-Blue: #00DFFC;
 // Mobile
 @mobile: '(max-width: 500px)';
