--- a/less/about.less
+++ b/less/about.less
@@ -19,12 +19,12 @@
     }
     h1 {
         height: 50%;
-        color: @peach;
+        color: @font-color;
     }
     
 }
 
-.top-img {
+/*.top-img {
     display: block;
     padding: 1%;
     border-radius: 30%;
@@ -32,7 +32,7 @@
     margin: 15px auto;
     width: 100%;
     max-width: 800px
-}
+}*/
 
 .main {
     .middle-section {
@@ -69,7 +69,7 @@
     color: @font-color;
 }
 
-.bottom-img {
+/*.bottom-img {
     display: block;
     padding: 1%;
     border-radius: 10%;
@@ -77,7 +77,7 @@
     margin: 50px auto 100px auto;
     width: 100%;
     max-width: 800px
-}
+}*/
 
     footer {
       flex-direction: center;
