--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ footer {
   align-items: center;
 }
 .container {
-  background-image: url(/design-files/sunset.jpg);
+  background-color: #005F6B;
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -208,15 +208,15 @@ footer {
   height: 50%;
   color: #C4C4C4;
 }
-/*.top-img {
-    display: block;
-    padding: 1%;
-    border-radius: 30%;
-    border: solid black 1px;
-    margin: 15px auto;
-    width: 100%;
-    max-width: 800px
-}*/
+.top-img {
+  display: block;
+  padding: 1%;
+  border-radius: 10%;
+  border: solid black 1px;
+  margin: 15px auto;
+  width: 100%;
+  max-width: 800px;
+}
 .main .middle-section {
   display: flex;
   color: #C4C4C4;
@@ -241,25 +241,32 @@ footer {
     flex-direction: column;
   }
 }
-.title-dream {
+.title-slogan {
   text-align: center;
   color: #C4C4C4;
 }
-.about-title {
+.main-title {
   text-align: center;
   margin-top: 15px;
   font-size: 4rem;
   color: #C4C4C4;
 }
-/*.bottom-img {
-    display: block;
-    padding: 1%;
-    border-radius: 10%;
-    border: solid black 1px;
-    margin: 50px auto 100px auto;
-    width: 100%;
-    max-width: 800px
-}*/
+button {
+  margin: 25px;
+  width: 10%;
+  height: 50px;
+  align-items: center;
+}
+.bottom-img {
+  display: block;
+  padding: 1%;
+  border-radius: 10%;
+  border: solid black 1px;
+  margin: 50px auto 100px auto;
+  width: 100%;
+  max-width: 1800px;
+  height: 300px;
+}
 footer {
   flex-direction: center;
   display: flex;
