--- a/less/about.less
+++ b/less/about.less
@@ -1,5 +1,5 @@
 .container {
-    background-image: url(/design-files/sunset.jpg);
+    background-color: @main-bg;
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -24,15 +24,15 @@
     
 }
 
-/*.top-img {
+.top-img {
     display: block;
     padding: 1%;
-    border-radius: 30%;
+    border-radius: 10%;
     border: solid black 1px;
     margin: 15px auto;
     width: 100%;
     max-width: 800px
-}*/
+}
 
 .main {
     .middle-section {
@@ -57,27 +57,33 @@
     }  
 }
 
-.title-dream {
+.title-slogan {
     text-align: center;
     color: @font-color;
 }
 
-.about-title {
+.main-title {
     text-align: center;
     margin-top: 15px;
     font-size: 4rem;
     color: @font-color;
 }
-
-/*.bottom-img {
+button {
+    margin: 25px;
+    width: 10%;
+    height: 50px;
+    align-items: center;
+}
+.bottom-img {
     display: block;
     padding: 1%;
     border-radius: 10%;
     border: solid black 1px;
     margin: 50px auto 100px auto;
     width: 100%;
-    max-width: 800px
-}*/
+    max-width: 1800px;
+    height: 300px;
+}
 
     footer {
       flex-direction: center;
