--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ footer {
   align-items: center;
 }
 .container {
-  background-color: #005F6B;
+  background-image: url(/design-files/rent-tech.jpg);
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -251,11 +251,19 @@ footer {
   font-size: 4rem;
   color: #C4C4C4;
 }
-button {
+.tButton {
   margin: 25px;
   width: 10%;
   height: 50px;
-  align-items: center;
+  align-items: left;
+  border-radius: 10%;
+}
+.bButton {
+  margin: 25px;
+  width: 10%;
+  height: 50px;
+  align-items: left;
+  border-radius: 10%;
 }
 .bottom-img {
   display: block;
@@ -264,7 +272,7 @@ button {
   border: solid black 1px;
   margin: 50px auto 100px auto;
   width: 100%;
-  max-width: 1800px;
+  max-width: 1000px;
   height: 300px;
 }
 footer {
