--- a/less/about.less
+++ b/less/about.less
@@ -1,5 +1,5 @@
 .container {
-    background-color: @main-bg;
+    background-image: url(/design-files/rent-tech.jpg);
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -31,7 +31,8 @@
     border: solid black 1px;
     margin: 15px auto;
     width: 100%;
-    max-width: 800px
+    max-width: 800px;
+    
 }
 
 .main {
@@ -68,11 +69,19 @@
     font-size: 4rem;
     color: @font-color;
 }
-button {
+.tButton {
     margin: 25px;
     width: 10%;
     height: 50px;
-    align-items: center;
+    align-items: left;
+    border-radius: 10%;
+}
+.bButton {
+    margin: 25px;
+    width: 10%;
+    height: 50px;
+    align-items: left;
+    border-radius: 10%;
 }
 .bottom-img {
     display: block;
@@ -81,8 +90,9 @@ button {
     border: solid black 1px;
     margin: 50px auto 100px auto;
     width: 100%;
-    max-width: 1800px;
+    max-width: 1000px;
     height: 300px;
+    
 }
 
     footer {
