--- a/less/home.less
+++ b/less/home.less
@@ -1,16 +1,21 @@
-.container2 {
-    background-image: url(/design-files/sunset.jpg);
+.container {
+    background-image: url(/design-files/rent-tech.jpg);
     width: 100%;
     background-size: cover;
     background-position: center;
+    @media @mobile {
+        background-size: cover;
+        background-position: inherit;
+        height: 70rem;
+    }
 }
-.topNav2 {
+.topNav {
     header {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-    .nav-links2 {
+    .nav-links {
         color: @nav-text;   
         font-size: 1.8rem;
     } 
@@ -19,23 +24,24 @@
     }
     h1 {
         height: 50%;
-        color: @peach;
+        color: @font-color;
     }
     
 }
 
-.top-img2 {
+.top-img {
     display: block;
     padding: 1%;
-    border-radius: 30%;
+    border-radius: 10%;
     border: solid black 1px;
     margin: 15px auto;
     width: 100%;
-    max-width: 800px
+    max-width: 800px;
+    
 }
 
-.main2 {
-    .middle-section2 {
+.main {
+    .middle-section {
         display:flex;
         color: @font-color;
         width: 96%;
@@ -57,26 +63,43 @@
     }  
 }
 
-.title-about {
+.title-slogan {
     text-align: center;
     color: @font-color;
 }
 
-.about-title {
+.main-title {
     text-align: center;
     margin-top: 15px;
     font-size: 4rem;
     color: @font-color;
 }
-
-.bottom-img2 {
+.tButton {
+    .center();
+    margin: 25px;
+    width: 10%;
+    height: 50px;
+    
+    border-radius: 10%;
+}
+.bButton {
+    .center();
+    margin: 25px;
+    width: 10%;
+    height: 50px;
+    align-items: left;
+    border-radius: 10%;
+}
+.bottom-img {
     display: block;
     padding: 1%;
     border-radius: 10%;
     border: solid black 1px;
     margin: 50px auto 100px auto;
     width: 100%;
-    max-width: 800px
+    max-width: 1000px;
+    height: 300px;
+    
 }
 
     footer {
@@ -84,7 +107,7 @@
       display: flex;
       font-size: 1.8rem;
     .copywright {
-        color: @copywright-text;
+        color: @secondary-text;
         padding: 20px;
         text-align: center;
         margin: 10%;
@@ -92,14 +115,14 @@
     @media @mobile  {
         background-size: cover;
         background-position: inherit;
-        .topNav2 {
+        .topNav {
     
             header {
                 display: flex;
                 justify-content: space-between;
                 
             }
-            .nav-links2 {
+            .nav-links {
                 margin: 0 auto;
                 color: @nav-text;   
                 font-size: 1.8rem;
