--- a/less/variables.less
+++ b/less/variables.less
@@ -8,7 +8,7 @@
 @secondary-text: @Ocean-Blue;
 
 // Colors
-@Black: #343838;
+@Black: black;
 @Dark-Blue: #005F6B;
 @Dark-Gray: #477F87;
 @Light-Blue: #00B4CC;
