--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,13 @@ footer {
   background-size: cover;
   background-position: center;
 }
+@media '(max-width: 500px)' {
+  .container {
+    background-size: cover;
+    background-position: inherit;
+    height: 70rem;
+  }
+}
 .topNav header {
   display: flex;
   justify-content: space-between;
@@ -252,13 +259,18 @@ footer {
   color: #C4C4C4;
 }
 .tButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 25px;
   width: 10%;
   height: 50px;
-  align-items: left;
   border-radius: 10%;
 }
 .bButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 25px;
   width: 10%;
   height: 50px;
@@ -281,7 +293,142 @@ footer {
   font-size: 1.8rem;
 }
 footer .copywright {
-  color: #343838;
+  color: #00DFFC;
+  padding: 20px;
+  text-align: center;
+  margin: 10%;
+}
+@media '(max-width: 500px)' {
+  footer {
+    background-size: cover;
+    background-position: inherit;
+  }
+  footer .topNav header {
+    display: flex;
+    justify-content: space-between;
+  }
+  footer .topNav .nav-links {
+    margin: 0 auto;
+    color: #00B4CC;
+    font-size: 1.8rem;
+  }
+  footer .topNav a:Hover {
+    color: #477F87;
+  }
+  footer .topNav h1 {
+    align-items: center;
+    height: 50%;
+    color: #00DFFC;
+  }
+}
+.container {
+  background-image: url(/design-files/rent-tech.jpg);
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+}
+@media '(max-width: 500px)' {
+  .container {
+    background-size: cover;
+    background-position: inherit;
+    height: 70rem;
+  }
+}
+.topNav header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.topNav .nav-links {
+  color: #00B4CC;
+  font-size: 1.8rem;
+}
+.topNav a:Hover {
+  color: #477F87;
+}
+.topNav h1 {
+  height: 50%;
+  color: #C4C4C4;
+}
+.top-img {
+  display: block;
+  padding: 1%;
+  border-radius: 10%;
+  border: solid black 1px;
+  margin: 15px auto;
+  width: 100%;
+  max-width: 800px;
+}
+.main .middle-section {
+  display: flex;
+  color: #C4C4C4;
+  width: 96%;
+  margin: 15px auto;
+}
+.main .middle-section p {
+  padding: 2%;
+  border: solid black 1px;
+  margin: 0 10px;
+  border-radius: 8px;
+  background-color: black;
+  opacity: 0.7;
+}
+@media '(max-width: 500px)' {
+  .main .middle-section p {
+    margin: 10px 0;
+  }
+}
+@media '(max-width: 500px)' {
+  .main .middle-section {
+    flex-direction: column;
+  }
+}
+.title-slogan {
+  text-align: center;
+  color: #C4C4C4;
+}
+.main-title {
+  text-align: center;
+  margin-top: 15px;
+  font-size: 4rem;
+  color: #C4C4C4;
+}
+.tButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+  width: 10%;
+  height: 50px;
+  border-radius: 10%;
+}
+.bButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+  width: 10%;
+  height: 50px;
+  align-items: left;
+  border-radius: 10%;
+}
+.bottom-img {
+  display: block;
+  padding: 1%;
+  border-radius: 10%;
+  border: solid black 1px;
+  margin: 50px auto 100px auto;
+  width: 100%;
+  max-width: 1000px;
+  height: 300px;
+}
+footer {
+  flex-direction: center;
+  display: flex;
+  font-size: 1.8rem;
+}
+footer .copywright {
+  color: #00DFFC;
   padding: 20px;
   text-align: center;
   margin: 10%;
