--- a/css/index.css
+++ b/css/index.css
@@ -227,11 +227,11 @@ footer {
 .main .middle-section {
   display: flex;
   color: #C4C4C4;
-  width: 96%;
+  width: 100%;
   margin: 15px auto;
 }
 .main .middle-section p {
-  padding: 2%;
+  padding: 5%;
   border: solid black 1px;
   margin: 0 10px;
   border-radius: 8px;
@@ -245,7 +245,7 @@ footer {
 }
 @media '(max-width: 500px)' {
   .main .middle-section {
-    flex-direction: column;
+    flex-direction: flex-container;
   }
 }
 .title-slogan {
@@ -255,8 +255,8 @@ footer {
 .main-title {
   text-align: center;
   margin-top: 15px;
-  font-size: 4rem;
-  color: #C4C4C4;
+  font-size: 5rem;
+  color: #00DFFC;
 }
 .tButton {
   display: flex;
@@ -321,106 +321,91 @@ footer .copywright {
     color: #00DFFC;
   }
 }
-.container {
+.container2 {
   background-image: url(/design-files/rent-tech.jpg);
   width: 100%;
+  height: 1530px;
   background-size: cover;
   background-position: center;
 }
 @media '(max-width: 500px)' {
-  .container {
+  .container2 {
     background-size: cover;
     background-position: inherit;
     height: 70rem;
   }
 }
-.topNav header {
+.topNav2 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.topNav .nav-links {
+.topNav2 .nav-links2 {
   color: #00B4CC;
   font-size: 1.8rem;
 }
-.topNav a:Hover {
+.topNav2 a:Hover {
   color: #477F87;
 }
-.topNav h1 {
+.topNav2 h1 {
   height: 50%;
   color: #C4C4C4;
 }
-.top-img {
-  display: block;
-  padding: 1%;
-  border-radius: 10%;
-  border: solid black 1px;
-  margin: 15px auto;
-  width: 100%;
-  max-width: 800px;
-}
-.main .middle-section {
+.main2 .middle-section2 {
   display: flex;
-  color: #C4C4C4;
+  justify-content: space-between;
+  color: #00DFFC;
   width: 96%;
   margin: 15px auto;
 }
-.main .middle-section p {
+.main2 .middle-section2 p {
   padding: 2%;
-  border: solid black 1px;
+  border: solid black 4px;
   margin: 0 10px;
   border-radius: 8px;
-  background-color: black;
+  background-color: blueviolet;
   opacity: 0.7;
 }
 @media '(max-width: 500px)' {
-  .main .middle-section p {
+  .main2 .middle-section2 p {
     margin: 10px 0;
   }
 }
 @media '(max-width: 500px)' {
-  .main .middle-section {
+  .main2 .middle-section2 {
     flex-direction: column;
   }
 }
-.title-slogan {
-  text-align: center;
-  color: #C4C4C4;
+.main3 .middle-section3 {
+  display: flex;
+  justify-content: space-between;
+  color: #00DFFC;
+  width: 96%;
+  margin: 100px auto;
 }
-.main-title {
+.main3 .middle-section3 p {
+  padding: 2%;
+  border: solid black 4px;
+  margin: 0 10px;
+  border-radius: 8px;
+  background-color: blueviolet;
+  opacity: 0.7;
+}
+@media '(max-width: 500px)' {
+  .main3 .middle-section3 p {
+    margin: 10px 0;
+  }
+}
+@media '(max-width: 500px)' {
+  .main3 .middle-section3 {
+    flex-direction: column;
+  }
+}
+.title-about {
   text-align: center;
   margin-top: 15px;
   font-size: 4rem;
   color: #C4C4C4;
-}
-.tButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 25px;
-  width: 10%;
-  height: 50px;
-  border-radius: 10%;
-}
-.bButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 25px;
-  width: 10%;
-  height: 50px;
-  align-items: left;
-  border-radius: 10%;
-}
-.bottom-img {
-  display: block;
-  padding: 1%;
-  border-radius: 10%;
-  border: solid black 1px;
-  margin: 50px auto 100px auto;
-  width: 100%;
-  max-width: 1000px;
-  height: 300px;
 }
 footer {
   flex-direction: center;
@@ -428,7 +413,7 @@ footer {
   font-size: 1.8rem;
 }
 footer .copywright {
-  color: #00DFFC;
+  color: black;
   padding: 20px;
   text-align: center;
   margin: 10%;
@@ -438,19 +423,19 @@ footer .copywright {
     background-size: cover;
     background-position: inherit;
   }
-  footer .topNav header {
+  footer .topNav2 header {
     display: flex;
     justify-content: space-between;
   }
-  footer .topNav .nav-links {
+  footer .topNav2 .nav-links2 {
     margin: 0 auto;
     color: #00B4CC;
     font-size: 1.8rem;
   }
-  footer .topNav a:Hover {
+  footer .topNav2 a:Hover {
     color: #477F87;
   }
-  footer .topNav h1 {
+  footer .topNav2 h1 {
     align-items: center;
     height: 50%;
     color: #00DFFC;
