--- a/less/about.less
+++ b/less/about.less
@@ -1,8 +1,14 @@
 .container2 {
-    background-image: url(/design-files/sunset.jpg);
+    background-image: url(/design-files/rent-tech.jpg);
     width: 100%;
+    height: 1530px;
     background-size: cover;
     background-position: center;
+    @media @mobile {
+        background-size: cover;
+        background-position: inherit;
+        height: 70rem;
+    }
 }
 .topNav2 {
     header {
@@ -19,33 +25,24 @@
     }
     h1 {
         height: 50%;
-        color: @peach;
+        color: @font-color;
     }
     
-}
-
-.top-img2 {
-    display: block;
-    padding: 1%;
-    border-radius: 30%;
-    border: solid black 1px;
-    margin: 15px auto;
-    width: 100%;
-    max-width: 800px
 }
 
 .main2 {
     .middle-section2 {
         display:flex;
-        color: @font-color;
+        justify-content: space-between;
+        color: @secondary-text;
         width: 96%;
         margin: 15px auto;
         p {
             padding: 2%;
-            border: solid black 1px;
+            border: solid black 4px;
             margin: 0 10px;
             border-radius: 8px;
-            background-color: black;
+            background-color: blueviolet;
             opacity: .7;
             @media @mobile {
                 margin: 10px 0;
@@ -57,26 +54,36 @@
     }  
 }
 
-.title-about {
-    text-align: center;
-    color: @font-color;
+.main3 {
+    .middle-section3 {
+        display:flex;
+        justify-content: space-between;
+        color: @secondary-text;
+        width: 96%;
+        margin: 100px auto;
+        p {
+            padding: 2%;
+            border: solid black 4px;
+            margin: 0 10px;
+            border-radius: 8px;
+            background-color: blueviolet;
+            opacity: .7;
+            @media @mobile {
+                margin: 10px 0;
+
+            }
+        }
+        @media @mobile{
+            flex-direction:column;
+        }
+    }  
 }
 
-.about-title {
+.title-about {
     text-align: center;
     margin-top: 15px;
     font-size: 4rem;
     color: @font-color;
-}
-
-.bottom-img2 {
-    display: block;
-    padding: 1%;
-    border-radius: 10%;
-    border: solid black 1px;
-    margin: 50px auto 100px auto;
-    width: 100%;
-    max-width: 800px
 }
 
     footer {
