--- a/less/home.less
+++ b/less/home.less
@@ -44,21 +44,21 @@
     .middle-section {
         display:flex;
         color: @font-color;
-        width: 96%;
+        width: 100%;
         margin: 15px auto;
         p {
-            padding: 2%;
+            padding: 5%;
             border: solid black 1px;
             margin: 0 10px;
             border-radius: 8px;
-            background-color: black;
+            background-color: @copywright-text;
             opacity: .7;
             @media @mobile {
                 margin: 10px 0;
             }
         }
         @media @mobile{
-            flex-direction:column;
+            flex-direction: flex-container;
         }
     }  
 }
@@ -71,8 +71,8 @@
 .main-title {
     text-align: center;
     margin-top: 15px;
-    font-size: 4rem;
-    color: @font-color;
+    font-size: 5rem;
+    color: @secondary-text;
 }
 .tButton {
     .center();
