--- a/less/about.less
+++ b/less/about.less
@@ -1,13 +1,20 @@
 .container2 {
     background-image: url(/design-files/rent-tech.jpg);
     width: 100%;
-    height: 1530px;
+    height: 1705px;
     background-size: cover;
     background-position: center;
+    
     @media @mobile {
-        background-size: cover;
-        background-position: inherit;
-        height: 70rem;
+        @media @mobile {
+            background: @main-bg;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: inherit;
+            height: 235rem;
+            width: 47rem;
+        }
     }
 }
 .topNav2 {
@@ -15,9 +22,21 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin: 10px;
+        border: solid black 1px;
+        width: 1880px;
+        background-color: rgb(44, 35, 122);
+        @media @mobile {
+            display: flex;
+            justify-content: space-between;
+            margin: 10px;
+            width: 305px;
+            height: 8rem;
+            
+        }
     }
-    .nav-links2 {
-        color: @nav-text;   
+    .nav-links {
+        color: @font-color;   
         font-size: 1.8rem;
     } 
     a:Hover {
@@ -43,14 +62,12 @@
             margin: 0 10px;
             border-radius: 8px;
             background-color: blueviolet;
-            opacity: .7;
+            opacity: .9;
             @media @mobile {
                 margin: 10px 0;
+                flex-direction:column;
             }
-        }
-        @media @mobile{
-            flex-direction:column;
-        }
+        }    
     }  
 }
 
@@ -67,14 +84,11 @@
             margin: 0 10px;
             border-radius: 8px;
             background-color: blueviolet;
-            opacity: .7;
+            opacity: .9;
             @media @mobile {
                 margin: 10px 0;
-
+                flex-direction:column;
             }
-        }
-        @media @mobile{
-            flex-direction:column;
         }
     }  
 }
@@ -83,7 +97,21 @@
     text-align: center;
     margin-top: 15px;
     font-size: 4rem;
-    color: @font-color;
+    color: @secondary-text;
+    border: solid black 4px;
+    opacity: .7;
+    background-color: blueviolet;
+    border-radius: 8px;
+}
+.title-about2 {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 4rem;
+    color: @secondary-text;
+    border: solid black 4px;
+    opacity: .9;
+    background-color: blueviolet;
+    border-radius: 8px;
 }
 
     footer {
@@ -121,4 +149,4 @@
             }          
         }
     }
-}  
+}
