--- a/less/home.less
+++ b/less/home.less
@@ -4,16 +4,33 @@
     background-size: cover;
     background-position: center;
     @media @mobile {
+        background: @main-bg;
         background-size: cover;
         background-position: inherit;
-        height: 70rem;
+        height: 256rem;
+        width: 33rem;
     }
+}
+.logo {
+    height: 40px;
 }
 .topNav {
     header {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin: 10px;
+        border: solid black 1px;
+        width: 1880px;
+        background-color: rgb(44, 35, 122);
+        @media @mobile {
+            display: flex;
+            justify-content: space-between;
+            margin: 10px;
+            width: 30rem;
+            height: 8rem;
+            
+        }
     }
     .nav-links {
         color: @nav-text;   
@@ -37,7 +54,10 @@
     margin: 15px auto;
     width: 100%;
     max-width: 800px;
-    
+    @media @mobile {
+       display: none;
+    }
+   
 }
 
 .main {
@@ -53,12 +73,13 @@
             border-radius: 8px;
             background-color: @copywright-text;
             opacity: .7;
-            @media @mobile {
-                margin: 10px 0;
-            }
         }
         @media @mobile{
-            flex-direction: flex-container;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            width: 100%;
+
         }
     }  
 }
@@ -79,8 +100,11 @@
     margin: 25px;
     width: 10%;
     height: 50px;
-    
     border-radius: 10%;
+    @media @mobile {
+        display: flex;
+        width: 140px;
+    }
 }
 .bButton {
     .center();
@@ -89,6 +113,10 @@
     height: 50px;
     align-items: left;
     border-radius: 10%;
+    @media @mobile {
+        display: flex;
+        width: 140px;
+    }
 }
 .bottom-img {
     display: block;
@@ -111,10 +139,11 @@
         padding: 20px;
         text-align: center;
         margin: 10%;
+        @media @mobile  {
+            display: flex;
+            align-items: flex-end;
     }
-    @media @mobile  {
-        background-size: cover;
-        background-position: inherit;
+   
         .topNav {
     
             header {
