--- a/css/index.css
+++ b/css/index.css
@@ -197,8 +197,8 @@ footer {
     background: #005F6B;
     background-size: cover;
     background-position: inherit;
-    height: 256rem;
-    width: 33rem;
+    height: 259rem;
+    width: 330px;
   }
 }
 .logo {
@@ -214,11 +214,11 @@ footer {
   background-color: #2c237a;
 }
 @media (max-width: 500px) {
-  .topNav header {
+  .topNav {
     display: flex;
     justify-content: space-between;
     margin: 10px;
-    width: 30rem;
+    width: 310px;
     height: 8rem;
   }
 }
@@ -279,7 +279,8 @@ footer {
   font-size: 5rem;
   color: #00DFFC;
 }
-.tButton {
+Button {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -289,23 +290,7 @@ footer {
   border-radius: 10%;
 }
 @media (max-width: 500px) {
-  .tButton {
-    display: flex;
-    width: 140px;
-  }
-}
-.bButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 25px;
-  width: 10%;
-  height: 50px;
-  align-items: left;
-  border-radius: 10%;
-}
-@media (max-width: 500px) {
-  .bButton {
+  Button {
     display: flex;
     width: 140px;
   }
@@ -331,29 +316,6 @@ footer .copywright {
   text-align: center;
   margin: 10%;
 }
-@media (max-width: 500px) {
-  footer .copywright {
-    display: flex;
-    align-items: flex-end;
-  }
-}
-footer .copywright .topNav header {
-  display: flex;
-  justify-content: space-between;
-}
-footer .copywright .topNav .nav-links {
-  margin: 0 auto;
-  color: #00B4CC;
-  font-size: 1.8rem;
-}
-footer .copywright .topNav a:Hover {
-  color: #477F87;
-}
-footer .copywright .topNav h1 {
-  align-items: center;
-  height: 50%;
-  color: #00DFFC;
-}
 .container2 {
   background-image: url(/design-files/rent-tech.jpg);
   width: 100%;
@@ -361,7 +323,7 @@ footer .copywright .topNav h1 {
   background-size: cover;
   background-position: center;
 }
-@media (max-width: 500px) and (max-width: 500px) {
+@media (max-width: 500px) {
   .container2 {
     background: #005F6B;
     width: 100%;
@@ -369,12 +331,12 @@ footer .copywright .topNav h1 {
     background-size: cover;
     background-position: inherit;
     height: 235rem;
-    width: 47rem;
+    width: 57ch;
   }
 }
 .topNav2 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 10px;
   border: solid black 1px;
@@ -385,9 +347,11 @@ footer .copywright .topNav h1 {
   .topNav2 header {
     display: flex;
     justify-content: space-between;
+    flex-direction: flex-container;
+    width: 100%;
     margin: 10px;
     width: 305px;
-    height: 8rem;
+    height: 20rem;
   }
 }
 .topNav2 .nav-links {
@@ -418,6 +382,7 @@ footer .copywright .topNav h1 {
 }
 @media (max-width: 500px) {
   .main2 .middle-section2 p {
+    display: flex;
     margin: 10px 0;
     flex-direction: column;
   }
@@ -439,6 +404,7 @@ footer .copywright .topNav h1 {
 }
 @media (max-width: 500px) {
   .main3 .middle-section3 p {
+    display: flex;
     margin: 10px 0;
     flex-direction: column;
   }
@@ -473,27 +439,4 @@ footer .copywright {
   padding: 20px;
   text-align: center;
   margin: 10%;
-}
-@media (max-width: 500px) {
-  footer {
-    background-size: cover;
-    background-position: inherit;
-  }
-  footer .topNav2 header {
-    display: flex;
-    justify-content: space-between;
-  }
-  footer .topNav2 .nav-links2 {
-    margin: 0 auto;
-    color: #00B4CC;
-    font-size: 1.8rem;
-  }
-  footer .topNav2 a:Hover {
-    color: #477F87;
-  }
-  footer .topNav2 h1 {
-    align-items: center;
-    height: 50%;
-    color: #00DFFC;
-  }
 }
