--- a/less/about.less
+++ b/less/about.less
@@ -4,23 +4,20 @@
     height: 1705px;
     background-size: cover;
     background-position: center;
-    
     @media @mobile {
-        @media @mobile {
-            background: @main-bg;
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            background-position: inherit;
-            height: 235rem;
-            width: 47rem;
-        }
+        background: @main-bg;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: inherit;
+        height: 235rem;
+        width: 57ch;
     }
 }
 .topNav2 {
     header {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         margin: 10px;
         border: solid black 1px;
@@ -29,9 +26,11 @@
         @media @mobile {
             display: flex;
             justify-content: space-between;
+            flex-direction: flex-container;
+            width: 100%;
             margin: 10px;
             width: 305px;
-            height: 8rem;
+            height: 20rem;
             
         }
     }
@@ -64,6 +63,7 @@
             background-color: blueviolet;
             opacity: .9;
             @media @mobile {
+                display: flex;
                 margin: 10px 0;
                 flex-direction:column;
             }
@@ -86,6 +86,7 @@
             background-color: blueviolet;
             opacity: .9;
             @media @mobile {
+                display: flex;
                 margin: 10px 0;
                 flex-direction:column;
             }
@@ -123,30 +124,5 @@
         padding: 20px;
         text-align: center;
         margin: 10%;
-    }
-    @media @mobile  {
-        background-size: cover;
-        background-position: inherit;
-        .topNav2 {
-    
-            header {
-                display: flex;
-                justify-content: space-between;
-                
-            }
-            .nav-links2 {
-                margin: 0 auto;
-                color: @nav-text;   
-                font-size: 1.8rem;
-            } 
-            a:Hover {
-                color: @hover;
-            }
-            h1 {
-                align-items: center;
-                height: 50%;
-                color: @secondary-text;
-            }          
-        }
     }
 }
