--- a/less/home.less
+++ b/less/home.less
@@ -7,8 +7,8 @@
         background: @main-bg;
         background-size: cover;
         background-position: inherit;
-        height: 256rem;
-        width: 33rem;
+        height: 259rem;
+        width: 330px;
     }
 }
 .logo {
@@ -23,16 +23,16 @@
         border: solid black 1px;
         width: 1880px;
         background-color: rgb(44, 35, 122);
+        }
         @media @mobile {
             display: flex;
             justify-content: space-between;
             margin: 10px;
-            width: 30rem;
+            width: 310px;
             height: 8rem;
-            
-        }
     }
     .nav-links {
+        
         color: @nav-text;   
         font-size: 1.8rem;
     } 
@@ -74,6 +74,7 @@
             background-color: @copywright-text;
             opacity: .7;
         }
+    
         @media @mobile{
             display: flex;
             justify-content: space-between;
@@ -81,7 +82,7 @@
             width: 100%;
 
         }
-    }  
+    }
 }
 
 .title-slogan {
@@ -95,7 +96,9 @@
     font-size: 5rem;
     color: @secondary-text;
 }
-.tButton {
+
+Button {
+    cursor: pointer;
     .center();
     margin: 25px;
     width: 10%;
@@ -106,18 +109,7 @@
         width: 140px;
     }
 }
-.bButton {
-    .center();
-    margin: 25px;
-    width: 10%;
-    height: 50px;
-    align-items: left;
-    border-radius: 10%;
-    @media @mobile {
-        display: flex;
-        width: 140px;
-    }
-}
+
 .bottom-img {
     display: block;
     padding: 1%;
@@ -126,8 +118,7 @@
     margin: 50px auto 100px auto;
     width: 100%;
     max-width: 1000px;
-    height: 300px;
-    
+    height: 300px;   
 }
 
     footer {
@@ -139,31 +130,5 @@
         padding: 20px;
         text-align: center;
         margin: 10%;
-        @media @mobile  {
-            display: flex;
-            align-items: flex-end;
-    }
-   
-        .topNav {
-    
-            header {
-                display: flex;
-                justify-content: space-between;
-                
-            }
-            .nav-links {
-                margin: 0 auto;
-                color: @nav-text;   
-                font-size: 1.8rem;
-            } 
-            a:Hover {
-                color: @hover;
-            }
-            h1 {
-                align-items: center;
-                height: 50%;
-                color: @secondary-text;
-            }          
-        }
     }
 }  
