--- a/less/about.less
+++ b/less/about.less
@@ -56,12 +56,7 @@
         width: 96%;
         margin: 15px auto;
         p {
-            padding: 2%;
-            border: solid black 4px;
-            margin: 0 10px;
-            border-radius: 8px;
-            background-color: blueviolet;
-            opacity: .9;
+            .paragraph;
             @media @mobile {
                 display: flex;
                 margin: 10px 0;
@@ -79,12 +74,7 @@
         width: 96%;
         margin: 100px auto;
         p {
-            padding: 2%;
-            border: solid black 4px;
-            margin: 0 10px;
-            border-radius: 8px;
-            background-color: blueviolet;
-            opacity: .9;
+            .paragraph;
             @media @mobile {
                 display: flex;
                 margin: 10px 0;
@@ -95,24 +85,7 @@
 }
 
 .title-about {
-    text-align: center;
-    margin-top: 15px;
-    font-size: 4rem;
-    color: @secondary-text;
-    border: solid black 4px;
-    opacity: .7;
-    background-color: blueviolet;
-    border-radius: 8px;
-}
-.title-about2 {
-    text-align: center;
-    margin-top: 15px;
-    font-size: 4rem;
-    color: @secondary-text;
-    border: solid black 4px;
-    opacity: .9;
-    background-color: blueviolet;
-    border-radius: 8px;
+    .title;
 }
 
     footer {
