--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,32 @@
+.classy-button {
+  border-radius: 10%;
+  cursor: pointer;
+}
+.image {
+  display: block;
+  padding: 1%;
+  border-radius: 10%;
+  border: solid black 1px;
+  width: 100%;
+}
+.paragraph {
+  padding: 2%;
+  border: solid black 4px;
+  margin: 0 10px;
+  border-radius: 8px;
+  background-color: blueviolet;
+  opacity: 0.9;
+}
+.title {
+  text-align: center;
+  margin-top: 15px;
+  font-size: 4rem;
+  color: #00DFFC;
+  border: solid black 4px;
+  opacity: 0.9;
+  background-color: blueviolet;
+  border-radius: 8px;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -238,8 +267,8 @@ footer {
   padding: 1%;
   border-radius: 10%;
   border: solid black 1px;
-  margin: 15px auto;
   width: 100%;
+  margin: 15px auto;
   max-width: 800px;
 }
 @media (max-width: 500px) {
@@ -280,14 +309,11 @@ footer {
   color: #00DFFC;
 }
 Button {
+  border-radius: 10%;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 25px;
   width: 10%;
   height: 50px;
-  border-radius: 10%;
 }
 @media (max-width: 500px) {
   Button {
@@ -300,8 +326,8 @@ Button {
   padding: 1%;
   border-radius: 10%;
   border: solid black 1px;
-  margin: 50px auto 100px auto;
   width: 100%;
+  margin: 50px auto;
   max-width: 1000px;
   height: 300px;
 }
@@ -410,16 +436,6 @@ footer .copywright {
   }
 }
 .title-about {
-  text-align: center;
-  margin-top: 15px;
-  font-size: 4rem;
-  color: #00DFFC;
-  border: solid black 4px;
-  opacity: 0.7;
-  background-color: blueviolet;
-  border-radius: 8px;
-}
-.title-about2 {
   text-align: center;
   margin-top: 15px;
   font-size: 4rem;
