--- a/less/home.less
+++ b/less/home.less
@@ -47,12 +47,8 @@
 }
 
 .top-img {
-    display: block;
-    padding: 1%;
-    border-radius: 10%;
-    border: solid black 1px;
+    .image;
     margin: 15px auto;
-    width: 100%;
     max-width: 800px;
     @media @mobile {
        display: none;
@@ -98,12 +94,12 @@
 }
 
 Button {
-    cursor: pointer;
-    .center();
+    
+    .classy-button;
     margin: 25px;
     width: 10%;
     height: 50px;
-    border-radius: 10%;
+   
     @media @mobile {
         display: flex;
         width: 140px;
@@ -111,12 +107,8 @@ Button {
 }
 
 .bottom-img {
-    display: block;
-    padding: 1%;
-    border-radius: 10%;
-    border: solid black 1px;
-    margin: 50px auto 100px auto;
-    width: 100%;
+    .image;
+    margin: 50px auto;
     max-width: 1000px;
     height: 300px;   
 }
