--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,33 @@
 
-.center() {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.classy-button {
+    border-radius: 10%;
+    cursor: pointer;
+}
+
+.image {
+    display: block;
+    padding: 1%;
+    border-radius: 10%;
+    border: solid black 1px;
+    width: 100%
+}
+
+.paragraph {
+    padding: 2%;
+    border: solid black 4px;
+    margin: 0 10px;
+    border-radius: 8px;
+    background-color: blueviolet;
+    opacity: .9;
+}
+
+.title {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 4rem;
+    color: @secondary-text;
+    border: solid black 4px;
+    opacity: .9;
+    background-color: blueviolet;
+    border-radius: 8px;
 }
