--- a/less/about.less
+++ b/less/about.less
@@ -13,6 +13,11 @@
         height: 235rem;
         width: 57ch;
     }
+    @media @tablet {
+        width: 100%;
+        margin: auto;
+
+    }
 }
 .topNav2 {
     header {
@@ -31,6 +36,12 @@
             margin: 10px;
             width: 305px;
             height: 20rem;
+        }
+        @media @tablet {
+            width: 100%;
+            margin: auto;
+            width: 780px;
+            height: auto;
         }
     }
     .nav-links {
