--- a/css/index.css
+++ b/css/index.css
@@ -374,14 +374,8 @@ footer .copywright {
     height: 100%;
     background-size: cover;
     background-position: inherit;
-    height: 235rem;
+    height: 246rem;
     width: 57ch;
-  }
-}
-@media (max-width: 800px) {
-  .container2 {
-    width: 100%;
-    margin: auto;
   }
 }
 .topNav2 header {
@@ -392,24 +386,17 @@ footer .copywright {
   border: solid black 1px;
   width: 1880px;
   background-color: #2c237a;
+  font-size: 1.5rem;
 }
 @media (max-width: 500px) {
   .topNav2 header {
     display: flex;
-    justify-content: space-between;
-    flex-direction: flex-container;
+    justify-content: space-around;
+    align-content: center;
     width: 100%;
     margin: 10px;
     width: 305px;
-    height: 20rem;
-  }
-}
-@media (max-width: 800px) {
-  .topNav2 header {
-    width: 100%;
-    margin: auto;
-    width: 780px;
-    height: auto;
+    height: 8rem;
   }
 }
 .topNav2 .nav-links {
@@ -430,6 +417,13 @@ footer .copywright {
   width: 96%;
   margin: 15px auto;
 }
+@media (max-width: 500px) {
+  .main2 .middle-section2 {
+    display: flex;
+    margin: 10px 0;
+    flex-direction: column;
+  }
+}
 .main2 .middle-section2 p {
   padding: 2%;
   border: solid black 4px;
@@ -438,19 +432,19 @@ footer .copywright {
   background-color: blueviolet;
   opacity: 0.9;
 }
-@media (max-width: 500px) {
-  .main2 .middle-section2 p {
-    display: flex;
-    margin: 10px 0;
-    flex-direction: column;
-  }
-}
 .main3 .middle-section3 {
   display: flex;
   justify-content: space-between;
   color: #00DFFC;
   width: 96%;
   margin: 100px auto;
+}
+@media (max-width: 500px) {
+  .main3 .middle-section3 {
+    display: flex;
+    margin: 10px 0;
+    flex-direction: column;
+  }
 }
 .main3 .middle-section3 p {
   padding: 2%;
@@ -459,13 +453,6 @@ footer .copywright {
   border-radius: 8px;
   background-color: blueviolet;
   opacity: 0.9;
-}
-@media (max-width: 500px) {
-  .main3 .middle-section3 p {
-    display: flex;
-    margin: 10px 0;
-    flex-direction: column;
-  }
 }
 .title-about {
   text-align: center;
