--- a/less/about.less
+++ b/less/about.less
@@ -10,14 +10,14 @@
         height: 100%;
         background-size: cover;
         background-position: inherit;
-        height: 235rem;
+        height: 246rem;
         width: 57ch;
     }
-    @media @tablet {
-        width: 100%;
-        margin: auto;
+    // @media @tablet {
+    //     width: 100%;
+    //     margin: auto;
 
-    }
+    // }
 }
 .topNav2 {
     header {
@@ -28,21 +28,23 @@
         border: solid black 1px;
         width: 1880px;
         background-color: rgb(44, 35, 122);
+        font-size: 1.5rem;
         @media @mobile {
             display: flex;
-            justify-content: space-between;
-            flex-direction: flex-container;
+            justify-content: space-around;
+            align-content: center;
             width: 100%;
             margin: 10px;
             width: 305px;
-            height: 20rem;
+            height: 8rem;
+            
         }
-        @media @tablet {
-            width: 100%;
-            margin: auto;
-            width: 780px;
-            height: auto;
-        }
+        // @media @tablet {
+        //     width: 100%;
+        //     margin: auto;
+        //     width: 780px;
+        //     height: auto;
+        // }
     }
     .nav-links {
         color: @font-color;   
@@ -65,13 +67,13 @@
         color: @secondary-text;
         width: 96%;
         margin: 15px auto;
+        @media @mobile {
+            display: flex;
+            margin: 10px 0;
+            flex-direction:column;
+        }
         p {
             .paragraph;
-            @media @mobile {
-                display: flex;
-                margin: 10px 0;
-                flex-direction:column;
-            }
         }    
     }  
 }
@@ -83,13 +85,14 @@
         color: @secondary-text;
         width: 96%;
         margin: 100px auto;
+        @media @mobile {
+            display: flex;
+            margin: 10px 0;
+            flex-direction:column;
+        }
         p {
             .paragraph;
-            @media @mobile {
-                display: flex;
-                margin: 10px 0;
-                flex-direction:column;
-            }
+            
         }
     }  
 }
