--- a/less/global.less
+++ b/less/global.less
@@ -1,40 +1,54 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  html, body {
-    font-family: 'Open Sans';
-  }
-  
-  h1, h2, h3, h4, h5 {
-    padding-bottom: 10px;
-    font-family: 'Open Sans';
-  }
-  
-  h1 {
-    margin: 10px;
-    font-size: 5rem;
-  }
-  
-  h2 {
-    font-size: 3rem;
-    
-  }
+  box-sizing: border-box;
+}
 
-  h3 {
-    font-size: 2.5rem;
-  }
 
-  h4 {
-    font-size: 2rem;
-  }
+html {
+  font-size: 62.5%;
+}
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+  background-color: black;
+  color: white;
   
-  p {
-    line-height: 1.5;
-    font-size: 1.5rem;
-    padding: 0 auto;
-  }
+}
+
+h1, h2, h3, h4, h5 ,footer {
+ font-family: 'Roboto', sans-serif;
+ color: white;
+ 
+ ;
+
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+  padding-bottom: 10px;
+  color : white;
+}
+
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+  color : white;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 1.4rem;
+  padding-bottom: 10px;
+  color: white;
+}
+
+footer {
+  font-size : 2rem;
+  margin-top : 10px;
+}
+
+
+
