--- a/less/index.less
+++ b/less/index.less
@@ -1,8 +1,8 @@
-@import "variables";
-@import "mixins";
-@import "reset";
-@import "global";
-@import "navigation";
-@import "footer";
-@import "home";
-@import "about";
+@import "variables.less";
+@import "mixins.less";
+@import "reset.less";
+@import "global.less";
+@import "navigation.less";
+@import "footer.less";
+@import "home.less";
+@import "media.less";
