--- a/less/footer.less
+++ b/less/footer.less
@@ -1,8 +1,8 @@
 footer {
-    color: @secondary-text;
+   
     padding: 20px 0;
     margin-top: 20%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
   }
