--- a/less/home.less
+++ b/less/home.less
@@ -9,31 +9,35 @@
 
 // Header Navigation
   .menuoptions {
-      .flexBox();
+      
       width : 100%;
       justify-content: space-around;
   }
   header nav  a {
       text-decoration: none;
-      color :@textcolor;     
+      color :@textcolor;     //Using Variables
      justify-content: space-between; 
-      font-size: @font-size;  
+      font-size: @font-size;   //Using Variables
   }
   //             Top Section                //
   .main {
-    .flexBox();
-      justify-content: space-evenly;
+    .flexBox(100%, space-evenly);//Using parametric mixins 
+      
       margin-top:40px;
       background-image: url(../images/main1.jpg);
       background-size: unset;
-    
+      
+    }
+    .mainbox{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
     }
     button {
       width: 140px;
       height: 40px;
       background: white;
       align-items: flex-start;
-      margin-left: 40%;
       border: 1px solid black;
       margin-top :40px;
       border-radius: 30px;
@@ -50,10 +54,7 @@
     color:black;
     }
     .first {
-        display : flex;
-        flex-wrap : wrap;
-        justify-content: space-around;
-        width : 100%;
+        .flexBox(100%,space-between); //Using Parametric Mixins
     }
     p {
       font-size : 2.5rem;
@@ -65,8 +66,7 @@
     .Explore {
        width: 33%;
         @media @mobile{
-            .mobileFlex()
-            width : 100%;
+            .mobileFlex();  //Using Mixins
         }
     .camera{
           width :100%;
@@ -75,9 +75,7 @@
     .Try-it{
     width : 33%;
     @media @mobile{
-        display : flex;
-        flex-wrap: wrap;
-        width : 100%;
+        .mobileFlex();  //Using Mixins
     }
     .vrimage{
       width:100%;
@@ -87,10 +85,8 @@
     .Insured{
       width : 33%;
       @media @mobile{
-        display : flex;
-        flex-wrap: wrap;
-        width : 100%;
-        }
+        .mobileFlex();  //Using Mixins
+      }
     
       .teslaimage {
         width:100%;
@@ -112,10 +108,8 @@
     .Tesla{
       width : 50%;
       @media @mobile{
-        display : flex;
-        flex-wrap: wrap;
-        width : 100%;
-    }
+        .mobileFlex(); //Using Mixins
+      }
       .teslarent{
         width:100%;
     }
@@ -123,10 +117,7 @@
     .Vr{
       width : 50%;
       @media @mobile{
-        display : flex;
-        flex-wrap: wrap;
-        width : 100%;
-        margin-top:10%;
+        .mobileFlex(); //Using Mixins
     }
       .vrrent{
         width:100%;
@@ -137,9 +128,7 @@
     width : 50%;
     margin-top : 10px;
     @media @mobile{
-        display : flex;
-        flex-wrap: wrap;
-        width : 100%;
+        .mobileFlex(); //Using Mixins
         
     }
     .dronerent{
@@ -151,9 +140,7 @@
    width : 50%;
    margin-top : 10px;
    @media @mobile{
-    display : flex;
-    flex-wrap: wrap;
-    width : 100%;
+    .mobileFlex(); //Using Mixins
     
 }
    .goprorent{
@@ -192,9 +179,7 @@
 
 .about-image{
     @media @mobile{
-    display : flex;
-    flex-wrap: wrap;
-    width : 100%;
+        .mobileFlex(); //Using Mixins
     
 }
 }
@@ -214,9 +199,7 @@
 
 .red-moon{
     @media @mobile{
-        display : flex;
-        flex-wrap: wrap;
-        width : 100%;
+        .mobileFlex(); //Using Mixins
         
     }
 }
